Fixed jQuery Errori

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="icon" href="favicon.ico">
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
 
-    <title>Blog Template for Bootstrap</title>
+    <title>Ryan Pliske</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link href="blog.css" rel="stylesheet">
+
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
@@ -28,11 +30,7 @@
       <div class="container">
         <nav class="blog-nav" style="height: 80px;">
           <br/><br/>
-          <a class="blog-nav-item active" href="#">Home</a>
-          <a class="blog-nav-item" href="#">New features</a>
-          <a class="blog-nav-item" href="#">Press</a>
-          <a class="blog-nav-item" href="#">New hires</a>
-          <a class="blog-nav-item" href="#">About</a>
+          <a class="blog-nav-item active" href="#">Blog</a>
         </nav>
       </div>
     </div>
