--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
     <link rel="stylesheet" href="blog.css">
     <script>
     function Setup() {
-      $( function(){ $("#header").load("header.html");} );
+      $( function() { 
+        $("#header").load("header.html");
+        $("#footer").load("footer.html");
+      });
     }
     </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer onload="Setup()"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
   </head>
-
   <body>
     <div id="header"></div>
+    <div class ="container">
+      <div class="blog-header">
+      <h1 class="blog-title">Ryan Pliske Blogs</h1>
+      <p class="lead blog-description">Occasionally I'll blog about software development.</p>
+      </div>
+    </div>
   </body>
+  <footer id="footer" class="blog-footer"></footer>
 </html>
