--- a/index.html
+++ b/index.html
@@ -25,8 +25,20 @@
     <div id="header"></div>
     <div class ="container">
       <div class="blog-header">
-      <h1 class="blog-title">Ryan Pliske Blogs</h1>
-      <p class="lead blog-description">Occasionally I'll blog about software development.</p>
+        <h1 class="blog-title">Ryan Pliske Blogs</h1>
+        <p class="lead blog-description">Occasionally I'll blog about software development.</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-8 blog-main">
+            <div class="blog-post">
+              <h2 class="blog-post-title">Sample blog post</h2>
+              <p class="blog-post-meta">January 1, 2016</p>
+          </div>
+        </div>
+        <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+          <div class="sidebar-module sidebar-module-inset">
+          </div>
+        </div>
       </div>
     </div>
   </body>
