--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
-<p>Blog template credit goes to <a href="http://getbootstrap.com">Bootstrap</a> developed by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+<p>Template CSS developed by <a href="http://getbootstrap.com">Bootstrap</a>.</p>
 <p><a href="#">Back to top</a></p>
 
