--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         </div>
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
+            <h4>About</h4>
+            <p>Software engineer in St. Louis</p>
+            <p>iOS Developer <a href="https://twitter.com/MonsantoCo" target="_blank">@MonsantoCo</a></p>
+            <p>Co-Owner of <a href="https://twitter.com/Competidev" target="_blank">@CompetiDev</a></p>
+            <ol class="list-unstyled">
+              <li><a href="https://github.com/RyanPliske" target="_blank">GitHub</a></li>
+              <li><a href="https://twitter.com/RyanPliske" target="_blank">Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/ryan-pliske-3416b994" target="_blank">LinkedIn</a></li>
+            </ol>
           </div>
         </div>
       </div>
