--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
-<p>Template CSS developed by <a href="http://getbootstrap.com">Bootstrap</a>.</p>
+<p>Template CSS developed by <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>.</p>
 <p><a href="#">Back to top</a></p>
 
