--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     function Setup() {
       $( function() { 
         $("#header").load("header.html");
-        $("#footer").load("footer.html");
       });
     }
     </script>
@@ -51,5 +50,5 @@
       </div>
     </div>
   </body>
-  <footer id="footer" class="blog-footer"></footer>
+  <footer id="footer" class="blog-footer"><p><a href="#">Back to top</a></p></footer>
 </html>
