--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="blog.css">
-    <script>
-    function Setup() {
-      $( function() { 
-        $("#navbar").load("navbar.html");
-        $("#blog-header").load("blog-header.html");
-        $("#sidebar").load("sidebar.html");
-        $("#post1").load("post1.html");
-        $("#footer").load("footer.html");
-      });
-    }
-    </script>
+    <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer onload="Setup()"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
   </head>
