--- a/blog-header.html
+++ b/blog-header.html
@@ -1,4 +1,4 @@
 <div class="blog-header">
-	<h1 class="blog-title">Ryan Pliske Blogs</h1>
+	<h1 class="blog-title">Ryan Pliske</h1>
 	<p class="lead blog-description">Occasionally I'll blog about software development.</p>
 </div>
