--- a/sidebar.html
+++ b/sidebar.html
@@ -1,7 +1,7 @@
 <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
     <h4>About</h4>
-    <p>Software engineer in St. Louis</p>
+    <p>Software Engineer in St. Louis</p>
     <p>iOS Developer <a href="https://twitter.com/MonsantoCo" target="_blank">@MonsantoCo</a></p>
     <p>Co-Owner of <a href="https://twitter.com/Competidev" target="_blank">@CompetiDev</a></p>
   </div>
