--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div id="blog-header"></div>
       <div class="row">
         <div class="col-sm-8 blog-main">
+          <div id="post2" class="blog-post"></div>
           <div id="post1" class="blog-post"></div>
         </div>
         <div id="sidebar"></div>
