Small Edit to post2

--- a/post2.html
+++ b/post2.html
@@ -20,7 +20,7 @@
 	Lastly, If you've already published your git repository, you will most likely have to edit your git cache. Assuming you're using a unix system, you can do this by:
 </p>
 <blockquote>
-	git rm -r --cached path_to_your_folder_that_you_want_ignored/
+	git rm -r --cached path_to_file/
 </blockquote>
 <p>
 	If you're unfamiliar with a unix command line, you can easily find the path to your folder by typing the command: <b>pwd</b>. Actually you can do some more cool stuff with a unix command line. I'll write another blog about it soon.
