--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title>Ryan Pliske</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
     <link rel="stylesheet" href="blog.css">
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer onload="Setup()"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
   </head>
@@ -20,6 +22,7 @@
       <div id="blog-header"></div>
       <div class="row">
         <div class="col-sm-8 blog-main">
+          <div id="post3" class="blog-post"></div>
           <div id="post2" class="blog-post"></div>
           <div id="post1" class="blog-post"></div>
         </div>
