--- a/post3.html
+++ b/post3.html
@@ -22,8 +22,7 @@
 class <b>AppDelegate</b>: UIResponder, UIApplicationDelegate {
 	var window: UIWindow?
 	var tvApp: <b>MyTVApp</b>!
-
-	<abbr style="white-space:nowrap">func application(application: UIApplication, <i>didFinishLaunchingWithOptions</i> launchOptions: [NSObject : AnyObject]?) -> Bool {</abbr>
+	<p style="white-space:nowrap">func application(application: UIApplication, <i>didFinishLaunchingWithOptions</i> launchOptions: [NSObject : AnyObject]?) -> Bool {</p>
 	    window = UIWindow(frame: UIScreen.mainScreen().bounds)
 	    tvApp = MyTVApp(window: window!)
 	    return true
