--- a/post3.html
+++ b/post3.html
@@ -26,7 +26,7 @@ class AppDelegate: UIResponder, UIApplicationDelegate {
 }
 </code></pre>
 <p class="indent">
-	Secondly, I created a custom protocol, <span class="blog-myclass">MyTVAppControllerDelegate</span> that I created by extending Apple's protocol <span class="blog-class">TVApplicationControllerDelegate</span>. Out of the box, Apple's delegate simply listens to if and when the server responds with my main menu's TVML. I've modified it so that it can also listen to custom methods that I call from my Javascript. That way I can call <span style="color:#ff6600">gameStarted()</span> from my <b>Javascript</b> and <b>Swift</b> will receive that notification. It's magic! (This ability has been around for a while. So nothing is really new here.)
+	Secondly, I created a custom protocol, <span class="blog-myclass">MyTVAppControllerDelegate</span> that I created by extending Apple's protocol <span class="blog-class">TVApplicationControllerDelegate</span>. Out of the box, Apple's delegate simply listens to if and when the server responds with my main menu's TVML. I've modified it so that it can also listen to custom methods that I call from my Javascript. That way I can call <span style="color:#ff6600">gameStarted(str)</span> from my <b>Javascript</b> and <b>Swift</b> will receive that notification. It's magic! (This ability has been around for a while. So nothing is really new here.)
 </p>
 <pre><code class="swift code">import TVMLKit
 
@@ -37,7 +37,7 @@ protocol MyTVAppControllerDelegate: class, TVApplicationControllerDelegate {
 }
 </code></pre>
 <p class="indent">
-    Thirdly, <span class="blog-myclass">MyTVApp</span> adheres to this delegate so that it will receive the <span style="color:#ff6600">gameStarted()</span> JS notification. Here I can simply present the <span class="blog-class">GameScene</span> controlled by a <span class="blog-class">UIViewController</span>.
+    Thirdly, <span class="blog-myclass">MyTVApp</span> adheres to this delegate so that it will receive the <span style="color:#ff6600">gameStarted(str)</span> JS notification. Here I can simply present the <span class="blog-class">GameScene</span> controlled by a <span class="blog-class">UIViewController</span>.
 </p>
 
 
@@ -61,7 +61,7 @@ class MyTVApp: NSObject, MyTVAppControllerDelegate {
 }
 </code></pre>
 <p class="indent">
-    Lastly, the meat and potatoes. <span class="blog-myclass">MyTVAppController</span> does all of the real work (this part <i>is</i> new). It is the bridge between JS and Swift. Apple's Documentation states:
+    Lastly, the meat and potatoes. <span class="blog-myclass">MyTVAppController</span> does all of the real work. This object is new, but it utilizes the old JavaScriptCore framework. It is the bridge between JS and Swift. Apple's Documentation states:
 </p>
 <blockquote>
     The <span class="blog-class">TVApplicationController</span> class establishes the JavaScript environment to provide a centralized point of control and co-ordination. The class bridges the UI, navigation stack, storage and event handling from JavaScript.
@@ -70,15 +70,16 @@ class MyTVApp: NSObject, MyTVAppControllerDelegate {
     By subclassing this class, I've added all my initialization here. Take a look at the code and then I'll explain it below.
 </p>    
 <pre><code class="swift code">import TVMLKit
-
+// 1
 private typealias JavascriptClosure = (JSContext) -> Void
+// 2
 private typealias ObjectivecCompletionBlock = @convention(block) (String) -> Void
-
+// 3
 private let TVBaseURL = "http://localhost:9001/"
 
 class MyTVAppController: TVApplicationController {
     
-    // This creates a function on your server which can be called using JS by gameStarted(str)
+    // 4
     func setupGameStartedListener() {
         let gameStarted: JavascriptClosure = {
             [unowned self](context: JSContext) -> Void in
@@ -92,6 +93,14 @@ class MyTVAppController: TVApplicationController {
     }
 }
 </code></pre>
-<p class="indent">
-    By subclassing this class, I've added all my initialization here. 
+<p>
+    <ol type="1">
+        <li>In Swift you can declare a closure as a type. In my closure, I pass in my controller's <span class="blog-class">JSContext</span>. This context supplies information to <span class="blog-myclass">MyTVAppController</span> from my JS.</li>
+        <li>In Swift, <span class="blog-class">AnyObject</span> is actually an Obj-C protocol that can represent an instance of any class type. The <span class="blog-class">JSContext</span> has a method called <b>setObject(object: AnyObject!)</b> which accepts AnyObject. Swift closures do not adhere to AnyObject because it is a swift feature and not Obj-C. Thus, I first have to declare it as an Obj-C block. We do this with <span class="blog-class">@convention</span>. What this actually does is it is imports your swift type as a C function pointer (If you're not familar with C a pointer just points to a memory address, in this case a function). This pointer can then point to my Swift closure, and <b>setObject(object: AnyObject!)</b> can then accept my block.</li>
+        <li>This is where I've declared the path to my server.</li>
+        <li>The <b>evaluteInJavaScriptContext</b> method adds a block to the JavaScript execution queue and invokes the completion block after the evaluation block has finished execution. This enables us to create a function on a server which can be called using JS. In this case I've decalred my function as <span style="color:#ff6600">gameStarted(str)</span>.</li>
+    </ol> 
 </p> 
+<p>
+    And that's about it. Feel free to take a look at the <a href="https://github.com/RyanPliske/AppleTVSpike" target="_blank">source code</a> and use it at your convenience.
+</p>  
