--- a/post3.html
+++ b/post3.html
@@ -52,6 +52,10 @@ class MyTVApp: NSObject, MyTVAppControllerDelegate {
         appController = MyTVAppController(window: window, delegate: self)
     }
 
+    func appController(appController: TVApplicationController, didFinishLaunchingWithOptions options: [String : AnyObject]?) {
+        self.appController.setupGameStartedListener()
+    }
+
     func gameDidStartWithMessage(message: String) {
         print(message)
         let viewController = UIViewController()
