Revert "Began implementing Accordion Widget from JQuery"
This reverts commit 4c39a2fc6010a6779a08134d951670994102cdbf.

--- a/post2.html
+++ b/post2.html
@@ -1,3 +1,4 @@
+<h2 class="blog-post-title">Git Ignores</h2>
 <p class="blog-post-meta">December 31, 2015</p>
 <hr>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
