--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div id="blog-header"></div>
       <div class="row">
         <div class="col-sm-8 blog-main">
+          <div id="post4" class="blog-post"></div>
           <div id="post3" class="blog-post"></div>
           <div id="post2" class="blog-post"></div>
           <div id="post1" class="blog-post"></div>
